frame/support/test/tests/pallet_ui/call_invalid_index.stderr
error: number too large to fit in target type
  --> tests/pallet_ui/call_invalid_index.rs:15:24
   |
15 |         #[pallet::call_index(256)]
   |                              ^^^
